--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "@angular/build": "^21.0.5",
     "@angular/cli": "^21.0.5",
     "@angular/compiler-cli": "^21.0.0",
+    "autoprefixer": "^10.4.20",
     "jsdom": "^27.1.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
